--- a/front/main.html
+++ b/front/main.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Electron Test App</title>
+    </style>
+  </head>
+  <body>
+    <div id="screenPublisher"></div>
+    <video id="screenPublisherVideo"></video>
+    <script src="/js/commons.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/js/app.bundle.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="file:///Users/James/OPENTOK/electron-screenshare-opentok/app/public/js/opentok.js" charset="utf-8"></script>
+  </body>
 </html>
